--- a/public/index.html
+++ b/public/index.html
@@ -7,14 +7,15 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link rel="icon" type="image/png" sizes="16x16" href="../plugins/images/favicon.png">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:400,500,600,700"; rel="stylesheet">
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous"> -->
     <!-- <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.min.css" /> -->
-    <title>React Startup Project</title>
+    <title>Kyoo TV Screening</title>
 </head>
 
 <body class="fix-header">
   <div id = 'root'></div>
 </body>
-<script src='../node_modules/jquery/dist/jquery.min.js' />
-<script src='../node_modules/bootstrap/dist/js/bootstrap.js' />
+<!-- <script src='../node_modules/jquery/dist/jquery.min.js' /> -->
+<!-- <script src='../node_modules/bootstrap/dist/js/bootstrap.js' /> -->
 </html>
